refactor: update movie service to modern Spring Data patterns
• Removed Querydsl dependencies and complex specifications
• Simplified search and filtering with @Query methods
• Updated controllers to use Spring Page instead of PageResponse
• Streamlined endpoints and fixed return types